--- a/views/pageComponents/header.ejs
+++ b/views/pageComponents/header.ejs
@@ -8,14 +8,14 @@
                 <% } %>
                 <% if (!isWorker) { %>
                 <a href="/requests/new" class="font-medium leading-6 text-black">Создать запрос</a>
-                 <a href = "/setiings"  class="font-medium leading-6">Настройка пользователя</a>
+                 <a href = "/registration/settings"  class="font-medium leading-6">Настройка пользователя</a>
                     <a href = "/object"  class="font-medium leading-6">Собственные объекты</a>
                 <% } %>
                 <a href="/houses/all" class="font-medium leading-6 text-black">Все объекты</a>
                 <% if (isWorker) { %>
                 <a href="/registration/worker" class="font-medium leading-6">Новый сотрудник</a>
                 <a href = "/passport"  class="font-medium leading-6">Добавить паспортные данные</a>
-                 <a href = "/setiings"  class="font-medium leading-6">Настройка пользователя</a>
+                 <a href = "/registration/settingsWorker"   class="font-medium leading-6">Настройка работника</a>
                 <% } %>
             </nav>
         </div>
