Добавлена возможность изменять пароль с хешированием у клиента и у работника

--- a/views/pages/settingsWorker.ejs
+++ b/views/pages/settingsWorker.ejs
@@ -6,6 +6,7 @@
     <%- include('../components/input/base', {id: 'name', placeholder: 'Имя'}); -%>
     <%- include('../components/input/base', {id: 'secondName', placeholder: 'Отчество'}); -%>
     <%- include('../components/input/base', {id: 'email', placeholder: 'Email'}); -%>
+    <%- include('../components/input/base', {id: 'password', placeholder: 'Пароль'}); -%>
     <%- include('../components/button/primary', {text: 'Сохранить', type: 'submit'}); -%>
 </form>
 
