Рабочий класс документ + каркас обновления/добавления паспорта(работает до момента ввода данных_

--- a/views/pageComponents/header.ejs
+++ b/views/pageComponents/header.ejs
@@ -13,7 +13,7 @@
                 <a href="/houses" class="font-medium leading-6 text-black">Все объекты</a>
                 <% if (isWorker) { %>
                 <a href="/registration/worker" class="font-medium leading-6">Новый сотрудник</a>
-                <a href = "/passport"  class="font-medium leading-6">Добавить паспортные данные</a>
+                <a href = "/client/find"  class="font-medium leading-6">Добавить паспортные данные</a>
                  <a href = "/registration/settingsWorker"   class="font-medium leading-6">Настройка работника</a>
                 <% } %>
             </nav>
