--- a/views/pages/createRequest.ejs
+++ b/views/pages/createRequest.ejs
@@ -66,7 +66,7 @@
 
     <label for="house" class="block mb-2 text-sm font-medium text-gray-900">Объект:</label>
     <select required id="house" name="house" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 invalid:border-red-500 invalid:text-red-600">
-        <option disabled>Выберете отдел</option>
+        <option disabled>Выберете объект</option>
         <% houses.map((house) => { %>
             <option value="<%= house.id %>"><%= house.address %>, <%= house.districtName %>, <%= house.cityName %></option>
         <% }) %>
