--- a/views/pages/createDocument.ejs
+++ b/views/pages/createDocument.ejs
@@ -14,6 +14,16 @@
             <% }) %>
         </select>
     </div>
+    <textarea
+            id="doc_text"
+            name="doc_text"
+            required
+            rows="10"
+            class="block mt-52 p-2.5 w-full text-sm text-gray-900 rounded-lg border border-gray-300
+                focus:outline-none focus:ring-blue-500 focus:border-blue-500
+                invalid:border-red-500 invalid:text-red-600"
+            placeholder="Описание"
+    ></textarea>
     <div class="flex gap-4 mt-4">
         <%- include('../components/button/primary', {text: 'Сохранить', type: 'submit'}) %>
         <a href="/">
