--- a/views/pages/updateDocument.ejs
+++ b/views/pages/updateDocument.ejs
@@ -4,13 +4,16 @@
     <div class="flex mb-4 items-center flex-wrap gap-6 w-[60rem]">
         <h1 class="font-semibold text-2xl">Документ <%= doc.docNumber %></h1>
     </div>
-
-    <% fields.map((field) => { %>
-        <div class="mb-4">
-            <label for="<%= field.name %>" class="mb-2"><%= field.label %></label>
-            <%- include('../components/input/base', {placeholder: field.label, id: `${doc.id}--${field.id}`, value: field.Field}) %>
-        </div>
-    <% }) %>
+    <textarea
+            id="doc_text"
+            name="doc_text"
+            required
+            rows="10"
+            class="block mt-52 p-2.5 w-full text-sm text-gray-900 rounded-lg border border-gray-300
+                focus:outline-none focus:ring-blue-500 focus:border-blue-500
+                invalid:border-red-500 invalid:text-red-600"
+            placeholder="Описание"
+    ><%= doc_text %></textarea> <!-- Здесь выводим значение описания -->
 
     <div class="flex gap-4 mt-4">
         <%- include('../components/button/primary', {text: 'Сохранить изменения', type: 'submit'}) %>
