Возвращение блудной кнопки

--- a/views/pages/details.ejs
+++ b/views/pages/details.ejs
@@ -34,7 +34,7 @@
             transition: border-color 0.3s;
         }
         input:focus {
-            border-color: #48bb78;
+            border-color: #1d7141;
             outline: none;
         }
         button {
