--- a/views/pageComponents/header.ejs
+++ b/views/pageComponents/header.ejs
@@ -22,5 +22,9 @@
         <button type="button" onclick="window.history.back()" class="bg-gray-300 text-black p-2 rounded mt-4">
             Назад
         </button>
+        <!-- Кнопка "Выход" -->
+        <button type="button" onclick="window.location.href='/login'" class="bg-gray-300 text-black p-2 rounded mt-4">
+            Выход
+        </button>
     </div>
 </header>
