--- a/views/pages/createHouse.ejs
+++ b/views/pages/createHouse.ejs
@@ -1,6 +1,6 @@
 <%- include('../layout/base/top', {title: title, isWorker: isWorker}); %>
 
-<form method="post" action="/houses/new" enctype="multipart/form-data" class="bg-white p-4 w-fit rounded">
+<form method="post" action="/requests/<%=request%>/houses/new" enctype="multipart/form-data" class="bg-white p-4 w-fit rounded">
     <div class="flex mb-4 items-center flex-wrap gap-6 w-[60rem]">
         <h1 class="font-semibold text-2xl">Новый дом</h1>
     </div>
