--- a/views/components/input/base.ejs
+++ b/views/components/input/base.ejs
@@ -3,7 +3,7 @@
     <label for="<%= id %>" class="block mb-2 text-sm font-medium"><%= label %></label>
     <% } %>
     <input
-            type="<%= type || 'text' %>"
+            type="text"
             id="<%= id %>"
             name="<%= id %>"
             <% if (locals.placeholder) { %>
