Добавлено отображение статуса и назначения объектов

--- a/views/myHouseTable/head.ejs
+++ b/views/myHouseTable/head.ejs
@@ -3,6 +3,10 @@
     <th class="py-4 px-11 text-left">Тип</th>
     <th class="py-4 px-11 text-left">Адрес</th>
     <th class="py-4 px-11 text-left">Стоимость</th>
+    <th class="py-4 px-11 text-left">Назначение</th>
+    <% if (isWorker) { %>
+        <th class="py-4 px-11 text-left">Статус</th>
+    <% } %>
     <th class="py-4 px-11 text-left w-fit"></th>
 </tr>
 </thead>
